Some styling of UI is done

--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
         <div id="task-list">
           <ul>
             <li>
-              <p>Task 1</p>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Assumenda, recusandae.
+              </p>
+
               <div id="edit__delete">
                 <button id="edit">Edit</button>
                 <button id="delete">Delete</button>
