added edit and delete button in task list in create branch

--- a/index.html
+++ b/index.html
@@ -20,31 +20,7 @@
         <h2>Task</h2>
 
         <div id="task-list">
-          <ul id="task-added">
-            <li>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Assumenda, recusandae.
-              </p>
-
-              <div id="edit__delete">
-                <button id="edit">Edit</button>
-                <button id="delete">Delete</button>
-              </div>
-            </li>
-
-            <li>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Assumenda, recusandae.
-              </p>
-
-              <div id="edit__delete">
-                <button id="edit">Edit</button>
-                <button id="delete">Delete</button>
-              </div>
-            </li>
-          </ul>
+          <ul id="task-added"></ul>
         </div>
       </div>
     </div>
